--- a/html/peta/index.html
+++ b/html/peta/index.html
@@ -35193,6 +35193,10 @@
                 
                     <!-- col full -->
                     <div class="col-md-12">
+					<blockquote>
+						<p>“Unless someone like you cares a whole awful lot, Nothing is going to get better. It's not.” </p>
+						<small>Dr. Seuss</small>
+					</blockquote>
 						<h2>Find nearby counties</h2>
                         <input type="text" id="search" class="form-control" placeholder="Start typing..." id="search"/>
                     </div>
